adaptive-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adaptive-app
  namespace: adaptive-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-uat

spec:
  tls:
  - hosts:
    - uat.adaptive-suite.com  # or your custom domain
    secretName: adaptive-app-tls
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: uat.adaptive-suite.com
    http:
      paths:
      - backend:
          service:
            name: adaptive-app
            port:
              number: 80
        path: /
        pathType: Prefix
